meta tag additions, removed background on mobile resolves #3

--- a/CSS/theme.css
+++ b/CSS/theme.css
@@ -132,11 +132,10 @@ body {
     background-image: 
     radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 99%), 
     url('../bg.webp'); /* Your background image URL */
-background-repeat: no-repeat;
-background-size: cover; /* Cover the entire background */
-background-attachment: fixed;
-background-position: center; /* Adjust if needed */
-z-index: 1;
+    background-repeat: no-repeat;
+    background-size: cover; /* Cover the entire background */
+    background-attachment: fixed;
+    background-position: center; /* Adjust if needed */
     z-index: 1;
 }
 
@@ -148,5 +147,11 @@ html {
 @media (max-width: 500px) { 
     body {
         font-size: 15px; 
+        background-image: none;
+        background-repeat: no-repeat;
+        background-size: cover; /* Cover the entire background */
+        background-attachment: fixed;
+        background-position: center; /* Adjust if needed */
+        z-index: 1;
     }
 }
